# 8-sensor-ML

./: .gitignore  README.md
src/: gpio
src/python/: Model.py  MotorLayer.py  SensorLayer.py  main.py
src/python/XeneiBumper/: sensor.py
src/python/XeneiSensorML/: Model.py  MotorLayer.py  SensorLayer.py  SensorNeuron.py  model_layer.py  pyproject.toml  sensor_layer.py
src/python/xeneibumper/: sensor.py
src/python/xeneisensorml/: model.py  motor_layer.py  sensor_layer.py  sensor_neuron.py
